src/snapshots/tests__tests::test_fof_unit_formula-2.snap
---
created: "2019-06-11T12:13:10.570369195Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Unary(
    Not,
    Boolean(
        true
    )
)
