src/snapshots/tests__tests::test_fof_unitary_formula-3.snap
---
created: "2019-06-11T12:13:10.578955127Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Quantified(
    Forall,
    [
        Variable(
            "X"
        )
    ],
    Boolean(
        true
    )
)
