src/snapshots/tests__tests::test_ignored.snap
---
created: "2019-06-11T12:13:10.569987336Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
()
