src/snapshots/tests__tests::test_include-2.snap
---
created: "2019-06-11T12:13:10.584758370Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Include(
    Included(
        "test"
    ),
    Some(
        [
            LowerWord(
                "test"
            )
        ]
    )
)
