src/snapshots/tests__tests::test_include_path.snap
---
created: "2019-06-11T12:13:10.575915979Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
Included(
    "test"
)
