src/snapshots/tests__tests::test_infix_equality-2.snap
---
created: "2019-06-11T12:13:10.590187372Z"
creator: insta@0.8.1
source: src/tests.rs
expression: parsed
---
NotEqual
